--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 
 
-
     <script src="./scripts/buildsLiveUnlive.js"></script>
     <script src="./scripts/dataAvar.js"></script>
-    <script src="./scripts/script.js"></script>
+    <script type="module" src="./scripts/script_clear.js"></script>
+    <script type="module" src="./scripts/script.js"></script>
 </body>
 </html>
