--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=c382f711-9a69-4348-b68e-fa24272d7c5c&lang=ru_RU" type="text/javascript">
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
