--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <script src="./scripts/buildsLiveUnlive.js"></script>
     <script src="./scripts/dataAvar.js"></script>
+<!--     
+    <script type="module" src="./scripts/script.js"></script> -->
     <script type="module" src="./scripts/script_clear.js"></script>
-    <script type="module" src="./scripts/script.js"></script>
 </body>
 </html>
