add found and filter script

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./scripts/dataAvar.js"></script>
 <!--     
     <script type="module" src="./scripts/script.js"></script> -->
-    <script type="module" src="./scripts/script_clear.js"></script>
+    <!-- <script type="module" src="./scripts/script_clear.js"></script> -->
+    <script type="module" src="./scripts/other_script.js"></script>
 </body>
 </html>
